--- a/style.css
+++ b/style.css
@@ -36,20 +36,29 @@ div.a form.n1 button{
 }
 .searchdiv{
 
-    overflow: hidden;
+  width: 100%;
+  height: 60px;
+    overflow: visible;
     background-color: rgb(206, 203, 224);
-    padding: 0px 0px;
     
-
+    
+    
+margin-left: 0;
 
 }
-body img{
+.searchdiv img{
+  margin-top: 0px;
   float: left;
 width: 50px;
   
   }
   
-
+  body img{
+    margin-top: 20;
+    float: left;
+  width: 50px;
+    
+    }
 .Searchdiv input {
     padding-left: 40;
     height: 30px;
@@ -66,15 +75,44 @@ width: 50px;
 
 }
 
-.searchdiv form{
+.searchdiv form input{
 
-padding-left: 300px;
+width: 72%;
+float: left;
 
 }
 
 
+.search1{
+
+
+  float: right;
+display: inline-block;
+width: 24%;
+height: 30px;
+
+}
+
+.searchdiv form {
+
+padding-left: 300px;
+
+float: left;
+width: 400px;
+
+
+}
+
+.login1{
+float: right;
+margin-right: 10px;
+background-color: turquoise;
+
+
+}
 
 .topnav {
+  width: 100%;
   overflow: hidden;
   background-color: rgb(55, 194, 0);
 }
@@ -225,5 +263,127 @@ margin bottom: ;
     margin-right: 30;
       bottom: 0;
       width: 97%;
+  }
+
+
+
+  body {font-family: Arial, Helvetica, sans-serif;}
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
+}
+
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+.container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
+  padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 5% auto; 
+  border: 1px solid #888;
+  width: 40%; 
+}
+
+
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
+}
+
+
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)} 
+  to {-webkit-transform: scale(1)}
+}
+  
+@keyframes animatezoom {
+  from {transform: scale(0)} 
+  to {transform: scale(1)}
+}
+
+
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
+  .cancelbtn {
+     width: 100%;
   }
 }
